--- a/menu/index.html
+++ b/menu/index.html
@@ -115,7 +115,7 @@
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata. Pane di nostra produzione.</small></h2>
+                        <h2 class="subheader">Hamburger <br><small>Servito con patate fritte e insalata. Pane di nostra produzione</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,5</span></a></h3>    
@@ -202,23 +202,35 @@
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Birre artigianali alla Spina</h2>
+                        <h2 class="subheader">Birre artigianali alla Spina <br><small>Otto spine che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>TropicAle<span class="right"> 4 | 6</span></h3>
-                                <p>Birrificio Emiliano. Ambrata e amara</p>
+                                <p>Birrificio Emiliano. Light IPA. 4,5%</p>
+                            </li>
+                            <li>
+                                <h3>Macario Gomez<span class="right"> 4 | 6</span></h3>
+                                <p>Birrificio Emiliano. Doppia IPA bionda con un amaro intenso. 7,5%</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Ape Regina<span class="right"> 4 | 6</span></a></h3>
-                                <p>Birrificio MC77. Divina e dorata</p>
+                                <p>Birrificio MC77. Bionda in stile belga con finale al miele. 6,9%</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html">Breaking Hops Double IPA<span class="right"> 4 | 6</span></a></h3>
-                                <p>Birrificio MC77. Ambrata e amarissima</p>
+                                <p>Birrificio MC77. Doppia IPA con un amaro intenso. 7,2%</p>
                             </li>
                             <li>
-                                <h3>Birra del mese<span class="right"> 4 | 6</span></h3>
-                                <p>Questa birra cambia spesso</p>
+                                <h3>Mukka Mannara<span class="right"> 33cl 5,5</span></h3>
+                                <p>Birrificio Mukkeller.  Bruna rosso scuro in stile belga. 9,3% di piacere</p>
+                            </li>
+                            <li>
+                                <h3>Mu Pils<span class="right"> 4 | 6</span></h3>
+                                <p>Birrificio Mukkeller.  Pils. 5,4%</p>
+                            </li>
+                            <li>
+                                <h3>Birra Mille Pils<span class="right"> 4 | 6</span></h3>
+                                <p>Birrificio Mils.  Pils. 5,4%</p>
                             </li>
                         </ul>
                     </div>
@@ -227,7 +239,7 @@
             <div class="panel-menu-n">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <h2 class="subheader">Birre artigianali in bottiglia</h2>
+                        <h2 class="subheader">Birre artigianali in bottiglia<br><small>40+ birre che cambiano a ritmi da vertigine. Oggi c'è, domani ne trovi un'altra</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Molotov Cocktail 65cl<span class="right">12,75</span></h3>
@@ -290,7 +302,7 @@
                                 <p>Fatta in Italia da Birrificio Emiliano. Kolsh che reinterpreta la tradizione tedesca. Fresca termina con un ottimo amaro. Gradi ABV: 10,5%</p>
                             </li>
                             <li>
-                                <h3>Tante altre<span class="right">da 5 a 20</span></h3>
+                                <h3>Tante altre<span class="right">da 5 a 17</span></h3>
                                 <p>Ogni mese introduciamo nuove birre in bottiglia. Chiedi al barista</p>
                             </li>
                         </ul>
@@ -324,8 +336,16 @@
                         <h2 class="subheader">Bollicine</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Franciacorta Brut<span class="right"> 6,5 | 26</span></a></h3>
+                                <h3>Franciacorta Brut<span class="right"> 5 | 22</span></a></h3>
                                 <p>La Fiorita</p>
+                            </li>
+                            <li>
+                                <h3>Franciacorta Brut<span class="right"> 26</span></a></h3>
+                                <p>Mosnel</p>
+                            </li>
+                            <li>
+                                <h3>Franciacorta Saten<span class="right"> 32</span></a></h3>
+                                <p>Mosnel</p>
                             </li>
                             <li>
                                 <h3>Spumante Brut<span class="right"> 4 | 14</span></a></h3>
@@ -341,19 +361,11 @@
                         <h2 class="subheader">Bianchi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Gewürztraminer<span class="right"> 5,5 | 22</span></a></h3>
-                                <p>Roberta Fugatti</p>
-                            </li>
-                            <li>
-                                <h3>Pecorino Offida<span class="right"> 3,5 | 13</span></a></h3>
-                                <p>Tenuta Seghetti Panichi</p>
-                            </li>
-                            <li>
-                                <h3>Verdicchio Castelli di Jesi<span class="right"> 3 | 10</span></a></h3>
+                                <h3>Bianco Verdicchio Castelli di Jesi DOC 2014 Goccia<span class="right"> 3 | 10</span></a></h3>
                                 <p>Conti di Buscareto</p>
                             </li>
                             <li>
-                                <h3>Verdicchio di Matelica<span class="right"> 5 | 19</span></a></h3>
+                                <h3>Verdicchio di Matelica<span class="right"> 4 | 16</span></a></h3>
                                 <p>Bisci</p>
                             </li>
                         </ul>
@@ -366,23 +378,19 @@
                         <h2 class="subheader">Rossi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Crimà<span class="right"> 3,5 | 11</span></a></h3>
+                                <h3>Rosso Piceno DOC<span class="right"> 10</span></a></h3>
                                 <p>Conti di Buscareto</p>
                             </li>
                             <li>
-                                <h3>Lacrima<span class="right"> 3,5 | 12</span></a></h3>
+                                <h3>Lacrima<span class="right"> 12</span></a></h3>
                                 <p>Conti di Buscareto</p>
                             </li>
                             <li>
-                                <h3>Lacrima di Morro d'Alba<span class="right"> 3,5 | 12</span></a></h3>
-                                <p>Malaserena</p>
-                            </li>
-                            <li>
-                                <h3>Rosso IGT<span class="right"> 4 | 15</span></a></h3>
+                                <h3>Crimà IGT<span class="right"> 11</span></a></h3>
                                 <p>Conti di Buscareto</p>
                             </li>
                             <li>
-                                <h3>Valpolicella<span class="right"> 5 | 19</span></a></h3>
+                                <h3>Valpolicella<span class="right"> 19</span></a></h3>
                                 <p>Fralibri</p>
                             </li>
                         </ul>
