--- a/menu/index.html
+++ b/menu/index.html
@@ -213,6 +213,10 @@
                                 <p>Birrificio Emiliano. Doppia IPA bionda con un amaro intenso. 7,5%</p>
                             </li>
                             <li>
+                                <h3>Punto<span class="right"> 4 | 6</span></h3>
+                                <p>Birrificio MC77. Session IPA leggermente amara. 3,9%</p>
+                            </li>
+                            <li>
                                 <h3><a href="http://beerstrot.it/menu/birra/ape-regina.html">Ape Regina<span class="right"> 4 | 6</span></a></h3>
                                 <p>Birrificio MC77. Bionda in stile belga con finale al miele. 6,9%</p>
                             </li>
