--- a/menu/index.html
+++ b/menu/index.html
@@ -158,6 +158,10 @@
                                 <h3><a href="http://beerstrot.it/menu/cibo/buffalo-chicken-wings.html">Buffalo Chicken Wings<span class="right">7,5</span></a></h3>    
                                 <p>Alette di pollo in salsa buffalo leggermente  piccante, servite con crema di gorgonzola e verdure</p>
                             </li>
+                            <li>
+                                <h3>T-Bone Steak<span class="right">4 per etto</span></h3>    
+                                <p>Costata da 800 o 1200 grammi. Solo su ordinazione durante la settimana. Chiamare almeno due giorni prima.</p>
+                            </li>
                         </ul>                      
                     </div>
                 </div>
