--- a/eventi/index.html
+++ b/eventi/index.html
@@ -52,6 +52,26 @@
         <div class="medium-12 large-12 columns">
             <article class="row">  
                 <div class="medium-3 large-3 columns">
+                    <h3 class="date extra-space-date-aside">Da Lug 2015</h3>
+                    <h5>Orario: dalle 18 alle 20</h5>
+                    <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
+                </div>
+                <div class="medium-3 large-3 columns">
+                    <a href="http://beerstrot.it/eventi/aperitivi.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/aperitivi-th.jpg" alt="Aperitivi a Ca' Vecchia Beerstrot"></a>
+                </div>
+                <div class="medium-6 large-6 columns">
+                    <h2>Estate + aperitivo = Ca' Vecchia Beerstrot</h2>
+                    <p>Tutti i Venerdì, Sabato e Domenica di Luglio e Agosto</p>
+                    <a href="http://beerstrot.it/eventi/festa-estate-concerto-live.html">Scopri l'evento &rarr;</a>
+                </div>
+                <div class="row">
+                    <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
+                        <hr>
+                    </div>
+                </div>
+            </article>
+            <article class="row">  
+                <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">21 Giu 2015</h3>
                     <h5>Orario: dalle 20:00</h5>
                     <h5><a href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker large"></i>Ca' Vecchia Beerstrot</a></h5>  
@@ -70,8 +90,6 @@
                     </div>
                 </div>
             </article>
-        </div>
-        <div class="medium-12 large-12 columns">
             <article class="row">  
                 <div class="medium-3 large-3 columns">
                     <h3 class="date extra-space-date-aside">30 Apr 2015</h3>
