--- a/eventi/index.html
+++ b/eventi/index.html
@@ -62,7 +62,7 @@
                 <div class="medium-6 large-6 columns">
                     <h2>Estate + aperitivo = Ca' Vecchia Beerstrot</h2>
                     <p>Tutti i Venerdì, Sabato e Domenica di Luglio e Agosto aperitivi con vista mozzafiato.</p>
-                    <a href="http://beerstrot.it/eventi/festa-estate-concerto-live.html">Scopri l'evento &rarr;</a>
+                    <a href="http://beerstrot.it/eventi/aperitivi.html">Scopri l'evento &rarr;</a>
                 </div>
                 <div class="row">
                     <div class="medium-9 medium-push-3 large-9 large-push-3 columns">
