--- a/eventi/index.html
+++ b/eventi/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="medium-6 large-6 columns">
                     <h2>Estate + aperitivo = Ca' Vecchia Beerstrot</h2>
-                    <p>Tutti i Venerdì, Sabato e Domenica di Luglio e Agosto aperitivi con vista mozzafiato.</p>
+                    <p>Tutti i Venerdì, Sabati e Domeniche di Luglio e Agosto aperitivi con vista mozzafiato.</p>
                     <a href="http://beerstrot.it/eventi/aperitivi.html">Scopri l'evento &rarr;</a>
                 </div>
                 <div class="row">
