--- a/eventi/aperitivi.html
+++ b/eventi/aperitivi.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Aperitivi</title>
-    <meta name="description" content="Tutti i Venerdì, Sabato e Domenica di Luglio e Agosto aperitivi con vista mozzafiato"/>
+    <meta name="description" content="Tutti i Venerdì, Sabati e Domeniche di Luglio e Agosto aperitivi con vista mozzafiato"/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Estate + aperitivo = Ca' Vecchia Beerstrot"/>
-    <meta name="twitter:description" content="Tutti i Venerdì, Sabato e Domenica di Luglio e Agosto aperitivi con vista mozzafiato"/>
+    <meta name="twitter:description" content="Tutti i Venerdì, Sabati e Domeniche di Luglio e Agosto aperitivi con vista mozzafiato"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/aperitivi.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/eventi/aperitivi.html"/>
     <meta property="og:url" content="http://beerstrot.it/eventi/aperitivi.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Estate + aperitivo = Ca' Vecchia Beerstrot"/>
-    <meta property="og:description" content="Tutti i Venerdì, Sabato e Domenica di Luglio e Agosto aperitivi con vista mozzafiato"/>
+    <meta property="og:description" content="Tutti i Venerdì, Sabati e Domeniche di Luglio e Agosto aperitivi con vista mozzafiato"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/aperitivi.jpg"/>
     <link rel="icon" href="http://beerstrot.it//asset/img/thumbs/favicon.png">
     <link rel="canonical" href="http://beerstrot.it/eventi/aperitivi.html"/>
