--- a/menu/index.html
+++ b/menu/index.html
@@ -161,6 +161,9 @@
                             <li>
                                 <h3>T-Bone Steak<span class="right">4 per etto</span></h3>    
                                 <p>Costata da 800 o 1200 grammi. Solo su ordinazione durante la settimana. Chiamare almeno due giorni prima.</p>
+                                <p>
+                                    <a href="tel:+390718853384"><i class="fi-telephone"></i><span itemprop="telephone">071 8853384</span></a>
+                                </p>
                             </li>
                         </ul>                      
                     </div>
