--- a/menu/index.html
+++ b/menu/index.html
@@ -439,16 +439,12 @@
                                 <p>Campari o Aperol</p>
                             </li>
                             <li>
-                                <h3>Cuba libre<span class="right">5</span></a></h3>
-                                <p>Bacardi Rhum</p>
-                            </li>
-                            <li>
                                 <h3>Gin Tonic<span class="right">5</span></a></h3>
                                 <p>Tanquerey</p>
                             </li>
                             <li>
                                 <h3>Gin Tonic<span class="right">8</span></a></h3>
-                                <p>Gin de Mare o Hendrick's</p>
+                                <p>Hendrick's, Botanical 22, Monkey 47 secco e alla prugna, Gin de Mare, acqua tonica con estretti rigorosamente naturali</p>
                             </li>
                         </ul>
                     </div>
