--- a/menu/index.html
+++ b/menu/index.html
@@ -455,15 +455,31 @@
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
                                 <h3>Varnelli<span class="right">2</span></a></h3>
-                                <p></p>
+                                <p>Mistrà, Sibilla, Tonico</p>
                             </li>
                             <li>
-                                <h3>Grappa Stravecchia<span class="right">3</span></a></h3>
-                                <p>18 Lune Marzadro</p>
+                                <h3>Grappa di Lacrima<span class="right">3</span></a></h3>
+                                <p>Mancinelli, </p>
                             </li>
                             <li>
-                                <h3>Rhum<span class="right">6</span></a></h3>
-                                <p>Matusalem</p>
+                                <h3>Grappa Rosso Conero<span class="right">3</span></a></h3>
+                                <p>Garofali</p>
+                            </li>
+                            <li>
+                                <h3>Rhum<span class="right"> 3 | 6</span></a></h3>
+                                <p>Matusalem 15 Anni</p>
+                            </li>
+                            <li>
+                                <h3>Whiskey<span class="right"> 5 | 10</span></a></h3>
+                                <p>Dad's Hat Rye Finished in Vermouth Barrels</p>
+                            </li>
+                            <li>
+                                <h3>Whiskey<span class="right"> 4 | 8</span></a></h3>
+                                <p>Knob Creek Bourbon 9 Years</p>
+                            </li>
+                            <li>
+                                <h3>Whiskey<span class="right"> 3 | 6</span></a></h3>
+                                <p>Maker's Mark Bourbon</p>
                             </li>
                         </ul>
                     </div>
