--- a/menu/index.html
+++ b/menu/index.html
@@ -459,7 +459,7 @@
                             </li>
                             <li>
                                 <h3>Grappa di Lacrima<span class="right">3</span></a></h3>
-                                <p>Mancinelli, </p>
+                                <p>Mancinelli</p>
                             </li>
                             <li>
                                 <h3>Grappa Rosso Conero<span class="right">3</span></a></h3>
