--- a/menu/index.html
+++ b/menu/index.html
@@ -370,7 +370,7 @@
                         <h2 class="subheader">Bianchi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Verdicchio Castelli di Jesi Goccia<span class="right"> 3 | 10</span></a></h3>
+                                <h3>Verdicchio Castelli di Jesi<span class="right"> 3 | 10</span></a></h3>
                                 <p>Conti di Buscareto</p>
                             </li>
                             <li>
