--- a/eventi/aperitivi.html
+++ b/eventi/aperitivi.html
@@ -79,7 +79,7 @@
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Estate + aperitivo = Ca' Vecchia Beerstrot</h2>
                 <p>Per il ciclo: Aperitivi</p>
-                <p>Tutti i Venerdì, Sabati e Domeniche di Luglio e Agosto aperitivi con vista mozzafiato, Birre Artigianali incredibilmente buone, Gin Tonic con Hendrick's, Botanical 22, Monkey 47 secco e alla prugna, Gin de Mare, acqua tonica con estretti rigorosamente naturali, Spritz, Spumanti Locali e alcuni Franciacorta.</p>
+                <p>Tutti i Venerdì, Sabati e Domeniche di Luglio e Agosto aperitivi con vista mozzafiato, Birre Artigianali incredibilmente buone, Gin Tonic con Hendrick's, Botanist 22, Monkey 47 Sloe, Monkey 47 Dry, Gin de Mare. Acqua tonica con estretti rigorosamente naturali, Spritz, Spumanti Locali e alcuni Franciacorta.</p>
                 <p>Volete mettere qualcosa sotto i denti mentre ammirata il tramonto su Filottrano? Abbiamo preparato delle chips sottili e croccanti con patate marchigiane dal gusto intenso e dolce: una vera delizia.</p>
         </article>
     </div>
