--- a/menu/index.html
+++ b/menu/index.html
@@ -442,7 +442,7 @@
                             </li>
                             <li>
                                 <h3>Gin Tonic<span class="right">8</span></a></h3>
-                                <p>Hendrick's, Botanical 22, Monkey 47 secco e alla prugna, Gin de Mare, acqua tonica con estretti rigorosamente naturali</p>
+                                <p>Hendrick's, Botanist 22, Monkey 47 Sloe, Monkey 47 Dry, Gin de Mare. Acqua tonica con estretti rigorosamente naturali</p>
                             </li>
                         </ul>
                     </div>
