--- a/eventi/index.html
+++ b/eventi/index.html
@@ -60,7 +60,7 @@
                     <a href="http://beerstrot.it/eventi/aperitivi.html"><img class="extra-space-image-event" src="http://beerstrot.it/asset/img/thumbs/aperitivi-th.jpg" alt="Aperitivi a Ca' Vecchia Beerstrot"></a>
                 </div>
                 <div class="medium-6 large-6 columns">
-                    <h2>Estate + aperitivo = Ca' Vecchia Beerstrot</h2>
+                    <h2>Aperitivi</h2>
                     <p>Tutti i Venerdì, Sabati e Domeniche di Luglio e Agosto aperitivi con vista mozzafiato.</p>
                     <a href="http://beerstrot.it/eventi/aperitivi.html">Scopri l'evento &rarr;</a>
                 </div>
