--- a/contatti/index.html
+++ b/contatti/index.html
@@ -51,7 +51,7 @@
             <div class="medium-6 large-6 columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h2>Ca' Vecchia Beerstrot</h2>
                     <h6>Telefono: 
-                        <a href="tel:+390718853384"><span itemprop="telephone">+39 071 8853384</span></a>
+                        <a href="tel:+390718853384"><span itemprop="telephone">071 8853384</span></a>
                     </h6>
                     <h6>Email: 
                         <a href="mailto:info@beerstrot.it"><span itemprop="email">info@beerstrot.it</span></a>
