--- a/menu/index.html
+++ b/menu/index.html
@@ -239,7 +239,7 @@
                             </li>
                             <li>
                                 <h3>Birra Mille Pils<span class="right"> 4 | 6</span></h3>
-                                <p>Birrificio Mils.  Pils. 5,4%</p>
+                                <p>Birrificio Mils.  Pils. 4,7%</p>
                             </li>
                         </ul>
                     </div>
@@ -322,23 +322,6 @@
 <!-- birra fine-->
 <!-- vino -->
         <section class="content" role="tabpanel" aria-hidden="false" id="vino">
-            <div class="panel-menu-n">
-                <div class="row">
-                    <div class="large-12 medium-12 columns small-12">
-                        <h2 class="subheader">Vino della casa</h2>
-                        <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                            <li>
-                                <h3>Rosso Conero<span class="right"> 2,5 | 6</span></a></h3>
-                                <p>Rosso</p>
-                            </li>
-                            <li>
-                                <h3>Verdicchio Castelli di Jesi<span class="right"> 2,5 | 6</span></a></h3>
-                                <p>Bianco</p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
             <div class="panel-menu-2n">
                 <div class="row">
                     <div class="large-12 medium-12 columns small-12">
@@ -370,8 +353,8 @@
                         <h2 class="subheader">Bianchi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3>Verdicchio Castelli di Jesi<span class="right"> 3 | 10</span></a></h3>
-                                <p>Conti di Buscareto</p>
+                                <h3>Vino della casa: Verdicchio Jesi<span class="right"> 2,5 | 6</span></a></h3>
+                                <p>Tavignano</p>
                             </li>
                             <li>
                                 <h3>Verdicchio di Matelica<span class="right"> 4 | 16</span></a></h3>
@@ -386,6 +369,10 @@
                     <div class="large-12 medium-12 small-12 columns">
                         <h2 class="subheader">Rossi</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+                            <li>
+                                <h3>Vino della Casa: Rosso Conero<span class="right"> 2,5 | 6</span></a></h3>
+                                <p>Tavignano</p>
+                            </li>
                             <li>
                                 <h3>Rosso Piceno DOC<span class="right"> 10</span></a></h3>
                                 <p>Conti di Buscareto</p>
