--- a/menu/index.html
+++ b/menu/index.html
@@ -97,7 +97,11 @@
                                 <p>Verdure di stagione</p>
                             </li>
                             <li>
-                                <h3>Bastoncini di zucchine e melanzane<span class="right">4</span></h3>
+                                <h3>Bufale e pomodorini<span class="right">6</span></h3>
+                                <p>Mozzarella di bufala, pomodorini e basilico</p>
+                            </li>
+                            <li>
+                                <h3>Zucchine e melanzane fritte<span class="right">4</span></h3>
                                 <p>Zucchine e melanzane fritte impanate con farina di riso</p>
                             </li>
                             <li>
