--- a/menu/index.html
+++ b/menu/index.html
@@ -97,7 +97,7 @@
                                 <p>Verdure di stagione</p>
                             </li>
                             <li>
-                                <h3>Bufale e pomodorini<span class="right">6</span></h3>
+                                <h3>Bufala e pomodorini<span class="right">6</span></h3>
                                 <p>Mozzarella di bufala, pomodorini e basilico</p>
                             </li>
                             <li>
