--- a/menu/index.html
+++ b/menu/index.html
@@ -164,7 +164,7 @@
                             </li>
                             <li>
                                 <h3>T-Bone Steak<span class="right">4 per etto</span></h3>    
-                                <p>Costata da 800 o 1200 grammi. Solo su ordinazione il Martedì, Mercoledì e Giovedì. Chiamare almeno due giorni prima. <a href="tel:+390718853384"><i class="fi-telephone"></i><span itemprop="telephone">071 8853384</span></a>
+                                <p>Costata da 800 o 1200 grammi. Solo su ordinazione il Martedì, Mercoledì e Giovedì. Chiamare almeno due giorni prima.<br><a href="tel:+390718853384"><i class="fi-telephone"></i><span itemprop="telephone">071 8853384</span></a>
                                 </p>
                             </li>
                         </ul>                      
